# libsmarttrainer

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md
ble-transport/: Cargo.toml
ble-transport/docs/: engineering-decisions.md
ble-transport/examples/: README.md  connect.rs  full_workflow.rs  read_data.rs  scan.rs  write_data.rs
ble-transport/src/: commands.rs  connection.rs  constants.rs  debounce.rs  error.rs  lib.rs  scanner.rs  transport.rs
examples/: README.md  connect.rs  full_workflow.rs  read_data.rs  scan.rs  write_data.rs
ftms-parser/: Cargo.toml
ftms-parser-ffi/: Cargo.toml  build.rs  cbindgen.toml
ftms-parser-ffi/src/: lib.rs
ftms-parser/src/: lib.rs
safety/: Cargo.toml
safety/src/: erg_safety.rs  lib.rs
src/: lib.rs  parser.rs  quirks.rs  safety.rs
src/ble/: commands.rs  connection.rs  constants.rs  debounce.rs  error.rs  mod.rs  scanner.rs  traits.rs  transport.rs
trainer-quirks/: Cargo.toml
trainer-quirks/docs/: engineering-decisions.md
trainer-quirks/src/: lib.rs
