[package]
name = "libsmarttrainer"
version = "0.1.0"
edition = "2024"
authors = ["Kris Hardy <hardyrk@gmail.com>"]
license = "LGPL-2.1"
repository = "https://github.com/krishardy/libsmarttrainer"
description = "Rust library for controlling BLE smart trainers via the FTMS protocol"
readme = "README.md"
keywords = ["ble", "ftms", "cycling", "smart-trainer", "bluetooth"]
categories = ["hardware-support"]

[dependencies]
bitflags = "2"
btleplug = { version = "0.11", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
uuid = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
thiserror = { version = "2", optional = true }
log = { version = "0.4", optional = true }

[features]
default = ["ble"]
ble = ["dep:btleplug", "dep:tokio", "dep:uuid", "dep:futures", "dep:async-trait", "dep:thiserror", "dep:log"]

[dev-dependencies]
mockall = "0.13"
tokio-stream = "0.1"
tokio = { version = "1", features = ["full", "test-util"] }
