[package]
name = "ble-transport"
version = "0.1.0"
edition.workspace = true

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
ftms-parser = { path = "../ftms-parser" }
safety = { path = "../safety" }
uuid = "1"
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
log = "0.4"

[dev-dependencies]
mockall = "0.13"
tokio-stream = "0.1"
tokio = { version = "1", features = ["full", "test-util"] }
